# CVPuzzleSolver

libs/base/: CMakeLists.txt
libs/base/libbase/: timer.cpp  timer.h  timer_tests.cpp
libs/images/: CMakeLists.txt
libs/images/libimages/: color.cpp  color.h  draw.cpp  draw.h
libs/images/libimages/algorithms/: extract_contour.cpp  simplify_contours.cpp  simplify_contours.h  simplify_contours_tests.cpp
prompts/: 06 класс для замера скорости обработки.txt  13 упрощение контура.txt
src/: main.cpp
